@@ -1,6 +1,11 @@
 ;;;; -*- coding: utf-8; -*-
   * new feature: SB-EXT:ATOMIC-INCF allows atomic incrementation of
     appropriately typed structure slots without locking.
+  * new feature: SB-EXT:CALL-WITH-TIMING provides access to timing
+    information like those gathered by TIME using a programming-friendly
+    interface.
+  * new feature: TIME reports time taken even if the form performs a
+    non-local transfer of control.
   * enhancement: reduced conservativism on GENCGC platforms: on
     average 45% less pages pinned (measured from SBCL self build).
   * bug fix: SB-EXT:COMPARE-AND-SWAP on SYMBOL-VALUE can no longer
